--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-flask==1.1.1
-SQLAlchemy==1.3.12
-PyMySQL==0.9.3
-Flask-SQLAlchemy==2.4.1
-flask-marshmallow==0.11.0
-marshmallow-sqlalchemy==0.22.3
-Flask-Cors==3.0.8
-munch==2.5.0
+flask
+SQLAlchemy
+PyMySQL
+Flask-SQLAlchemy
+flask-marshmallow
+marshmallow-sqlalchemy
+Flask-Cors
+munch
